Calculadora JFrame FINAL

--- a/CalculadoraJFrame/src/GUI/Ventana1.form
+++ b/CalculadoraJFrame/src/GUI/Ventana1.form
@@ -482,6 +482,8 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="UnoBtnMouseClicked"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="UnoBtnMouseEntered"/>
+            <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="UnoBtnMouseExited"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="DosBtn">
